tools/crates/vendor/toml_edit/tests/fixtures/invalid/control/multi-del.stderr
TOML parse error at line 1, column 21
  |
1 | multi-del  = """null"""
  |                     ^
invalid multiline basic string
